@@ -1,6 +1,11 @@
 Changes from jTDS 1.2.2
 =======================
 
+08/07/2009 - Holger Rehn
+ o Corrected bug [2340241] by adding a new connection property 'processId'.
+ o Addressed feature request [1778933] by adding a new connection property
+   'socketKeepAlive'.
+
 08/04/2009 - Holger Rehn
  o Corrected bug [1845477], Added missing license info.
  o Resolved issue [1955499], Performance problems with timestamps in
